--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,11 +1,11 @@
 
 main{
-    background-color: rgb(36, 36, 36);
+    background-color: rgb(24, 24, 24);
     margin: 0;
 }
 
 .main-content{
-  padding: 15px;
+  padding:0
 }
 .btn-4{
     margin-left: 10px;
