--- a/src/app/ui/movie/movie.scss
+++ b/src/app/ui/movie/movie.scss
@@ -7,18 +7,36 @@
     gap: 2rem;
     
 }
-p, li, h1{
+p, li, h1, h4{
     color: white;
 }
 .overview{
-    font-size: 22px;
+    font-size: 18px;
 }
 h1{
     text-shadow: 5px 5px 10px rgb(0, 0, 0);
 }
+ul{
+    list-style-type:none;
+}
+.genre{
+    display: inline-flex;
+}
 .left{
     display: flex;
     flex-direction: column;
+}
+.data{
+    background-color: rgb(24, 24, 24);
+    width: 100%;
+    height: 40%;
+    padding: 15px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
 }
 .info-container{
     display: flex;
