--- a/src/app/ui/search-movie-list/search-movie-list.html
+++ b/src/app/ui/search-movie-list/search-movie-list.html
@@ -1,13 +1,30 @@
-<app-search-bar></app-search-bar>
-@if (movieList()) {
-    @for (item of movieList(); track $index) { 
-        <div class="movie-card" appearance="outlined">
-            <div class="text-ellipsis" [attr.title]="item.title">
-                {{item.title}}
-            </div>
-            <div>
-                <a [routerLink]="['/movie', item.id]"><img  [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
-            </div>
-        </div>
-    }
+@if (this._router.url !== '/home') {
+    <div class="pagination up">
+    <button class="button-glob" (click)="prevPage()" [disabled]="currentPage() === 1"><mat-icon>keyboard_arrow_left</mat-icon></button>
+    <span>Page {{ currentPage() }}</span>
+    <button class="button-glob" (click)="nextPage()"><mat-icon>keyboard_arrow_right</mat-icon></button>
+    </div>
+}
+<div class="movie-list-container">
+    <div class="card-list">
+        @if (movieList()) {
+            @for (item of movieList(); track $index) { 
+                <div class="movie-card" appearance="outlined">
+                    <div class="text-ellipsis" [attr.title]="item.title">
+                        {{item.title}}
+                    </div>
+                    <div>
+                        <a [routerLink]="['/movie', item.id]"><img  [src]="'https://image.tmdb.org/t/p/w200' + item.poster_path"></a>
+                    </div>
+                </div>
+            }
+        }
+    </div>
+</div>
+@if (this._router.url !== '/home') {
+    <div class="pagination down">
+    <button class="button-glob" (click)="prevPage()" [disabled]="currentPage() === 1"><mat-icon>keyboard_arrow_left</mat-icon></button>
+    <span>Page {{ currentPage() }}</span>
+    <button class="button-glob" (click)="nextPage()"><mat-icon>keyboard_arrow_right</mat-icon></button>
+    </div>
 }
