--- a/src/app/ui/connexion/connexion.scss
+++ b/src/app/ui/connexion/connexion.scss
@@ -10,6 +10,11 @@
 h2,h4, h6{
     color: white;
 }
+a{
+    color: white;
+    text-decoration: none;
+    cursor: pointer;
+}
 h2{
     text-shadow: 5px 5px 10px rgb(0, 0, 0);
     padding-bottom: 15px;
@@ -41,4 +46,7 @@ h2{
   box-shadow: 0px 0px 17px -2px #ff2626;
   background-color: white;
 }
-
+.btn{
+    
+    
+}
