--- a/src/app/ui/movies/movies-list/movies-list.scss
+++ b/src/app/ui/movies/movies-list/movies-list.scss
@@ -11,7 +11,6 @@
 .card-list.home{
   display: grid;
   grid-template-columns: repeat(8, 1fr);
-  // align-items: start;
   gap: 1.5rem;
   width: 100%;
   box-sizing: border-box;
@@ -29,7 +28,7 @@
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   align-items: end;
-  gap: 2rem;
+  gap: 4rem 3rem;
   width: 100%;
   box-sizing: border-box;  
 }
