--- a/src/app/ui/search-bar/search-bar.scss
+++ b/src/app/ui/search-bar/search-bar.scss
@@ -1,43 +1,36 @@
 .search-content{
+    padding: 30px;
 }
 .search-container{
     display: flex;
     justify-content: center;
     align-items: center;
-  width: 100%;
-}
-.search-bar {
     width: 100%;
-    max-width: 700px;
-    margin: 30px;
-    margin: 30px 0;
-    background: #3b3b3b;
-    border: none;
-    outline: none;
-    padding: 10px 50px 10px 20px;
-    font-size: 16px;
-    border-radius: 9999px;
-    box-shadow: inset 2px 5px 8px rgb(5, 5, 5);
-    color: #ffffff;
-    box-sizing: border-box;
+    gap: 2rem;
 }
-.search-btn{
-    
-    
-    right: 4px;
-    
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    background: #111010;
-    border: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0px 0px 5px rgb(148, 148, 148);;
-    cursor: pointer;
-    .search-icon{
-        color: rgb(255, 255, 255);
-        width: 120%;
-    }
+
+.input, select {
+  border: 2px solid transparent;
+  width: 18em;
+  height: 2.5em;
+  padding-left: 0.8em;
+  outline: none;
+  overflow: hidden;
+  background-color: #F3F3F3;
+  border-radius: 10px;
+  transition: all 0.5s;
+}
+.input{
+    width: 17em;
+    height: 2em;
+}
+
+.input:hover, select:hover,
+.input:focus, select:focus {
+  border: 2px solid #ff0909;
+  box-shadow: 0px 0px 17px -2px #ff2626;
+  background-color: white;
+}
+::placeholder{
+    color: black;
 }
