--- a/src/app/ui/search-movie-list/search-movie-list.scss
+++ b/src/app/ui/search-movie-list/search-movie-list.scss
@@ -11,18 +11,17 @@
 .card-list{
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  // align-items: start;
-  gap: 1.5rem;
+  align-items: end;
+  gap: 4rem 3rem;
   width: 100%;
-  box-sizing: border-box;
-  transition: 250ms ease-in-out;
+  box-sizing: border-box;  
 }
 .card-list:hover a{
-  opacity: 0.4;
+  
   transition: 250ms ease-in-out;
 }
 .card-list:hover a:hover{
-  opacity: 1;
+  
   transition: 250ms ease-in-out;
 }
 h1, h3{
@@ -39,10 +38,7 @@ p{
 img{
   box-shadow: 5px 5px 10px rgb(0, 0, 0);
 } 
-img{
-  -webkit-box-reflect: below 2.5px
-    linear-gradient(transparent, rgba(0,0,0,0.001), rgba(0,0,0,0.01), rgba(0,0,0,0.2));
-}
+
 .movie-card a img{
   border-radius: 8px;
   width: 100%;
