--- a/src/app/ui/serie/serie.html
+++ b/src/app/ui/serie/serie.html
@@ -9,41 +9,39 @@
         }@else {
           <p>Pas encore de description pour ce film</p>
         }
-        <div class="data">
-          <div class="genre">
-            <h4>Genres: </h4>
-            <ul>
+        <div class="foot">
+          <div class="data">
+            <div class="genre">
+              <h4>Genres :</h4>
               @for (item of serie()?.genres; track $index) {
-                <li>{{item.name}}</li>
+                <p>{{item.name}}</p>
               }
-
-            </ul>
+            </div>
+            <div class="right">
+              <div class="infos">
+                <div class="info">
+                  <p><strong>{{serie()!.origin_country}}</strong></p>
+                  <p><strong>{{ serie()!.first_air_date | date:'yyyy' }}</strong></p>
+                  <p><strong>{{ serie()!.number_of_seasons}} Saisons</strong></p>
+                </div>
+              </div>
+              <div class="note">
+                <p><strong>Note :</strong> {{ serie()!.vote_average }} / 10</p>
+              </div>
+            </div>
           </div>
-          
-          <div class="infos">
-            <div class="info">
-              <p><strong>Date de sortie :</strong> {{ serie()!.first_air_date }}</p>
-            </div>
-            <div class="info">
-              <p><strong>Note :</strong> {{ serie()!.vote_average }} / 10</p>
-            </div>
-            <div class="info">
-              <p><strong>Durée :</strong> {{ serie()!.episode_run_time }} min</p>
-            </div>
+          <div class="btn">
+            <button class="button-glob">Like</button>
+            <button (click)="addToFavoritesSerie()" class="button-glob">Add</button>
           </div>
         </div>
         
-      </div>
-      <div class="btn">
-        <button class="button-glob">Like</button>
-        <button class="button-glob">Add</button>
-
       </div>
     </div>
     <div class="img-container">
       <h1 class="title">{{ serie()!.name }}</h1>
       <img class="back-img" [src]="'https://image.tmdb.org/t/p/w1280' + serie()!.backdrop_path" 
-            alt="{{ serie()!.original_name }}">
+            alt="{{ serie()!.name }}">
     </div>
   } @else {
     <p>Chargement du film...</p>
