--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,7 +25,7 @@ html, body {
   background-color: #00000000;
   cursor: pointer;
   color: #ede5ff;
-  transition: 0.2s;
+  transition: 350ms ease-in-out;
   height: 40px;
   font-size: 1.2rem;
 }
